# apdl

./: .gitignore  CONTEXT.md  DEBUG_GUIDE.md  README.md  debug_mpdu_test.bat
00-实施方案/: CCSD S协议标准化+仿真验证+性能分析一体化软件实现方案.md
01_需求文档/: APDL_需求规格说明书SRS.md  数据区子包恢复_DSL设计.md  数据区子包恢复_实现方案.md
01_需求文档/模块需求细分/: CCSDS语法单元详细设计.md
02_设计文档/: 01_设计文档总览.md
02_设计文档/02_架构设计/: 01_APDL_MVP实现状态总结.md  02_APDL语义规则系统设计说明.md  03_APDL_DSL语法规范.md  04_APDL分层与连接器DSL设计文档(V1).md  04_APDL分层与连接器DSL设计文档(最新版).md  04_APDL语义规则总结.md  08_分层连接器DSL说明.md  09_POEM模块详细总结.md
02_设计文档/架构设计/: APDL_整体架构设计.md
02_设计文档/模块详细设计/: POEM_协议编排与扩展模块设计.md
04_实施计划/: 01_APDL_MVP实施总结与后续计划.md  02_接收解包引擎MVP实施总结.md
05_交付物/: 01_APDL项目架构概览.md
07_知识库/CCSD S标准文档/: CCSDS协议语法单元分析.md  CCSDS语法单元Rust实现设计.md
07_知识库/开发笔记/: CCSDS语法单元研究笔记.md  POEM模块开发日志.md
code/: APDL_LAYER_CONNECTOR_DEV_CURRENT.md  APDL_LAYER_CONNECTOR_DEV_PLAN.md  ARCHITECTURE_SUMMARY.md  CHANGELOG.md  Cargo.toml  README.md  apdl-migration-plan.md  demo_connector.rs  migration_summary.md
code/apdl-app/: Cargo.toml
code/apdl-app/src/: main.rs
code/apdl-core/: Cargo.toml
code/apdl-editor/: Cargo.toml  README.md  package-lock.json  package.json
code/apdl-editor/schema/: apdl-protocol-schema-v1.json
code/apdl-editor/src/: App.tsx
code/apdl-editor/src-tauri/: Cargo.toml  tauri.conf.json
code/apdl-editor/src-tauri/schema/: apdl-protocol-schema-v1.json
code/apdl-editor/src-tauri/src/: lib.rs  main.rs
code/apdl-editor/src/components/: ProtocolTree.tsx  VisualEditor.tsx
code/apdl-editor/tests/: schema_validation_test.rs
code/apdl-iam/: Cargo.toml  README.md
code/apdl-lsk/: Cargo.toml
code/apdl-poem/: CONNECTOR_ARCHITECTURE.md  Cargo.toml  LAYER_CONNECTOR_DSL_README.md  debug_test.rs  (+5 more)
(+150 files in other folders)
