[package]
name = "apdl-editor"
version = "0.1.0"
edition = "2021"
authors = ["APDL Team"]
description = "APDL Protocol Editor - Schema validation and UI"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = "0.17"

[dev-dependencies]
serde_json = "1.0"
jsonschema = "0.17"

[[test]]
name = "schema_validation_test"
path = "tests/schema_validation_test.rs"
